[package]
name = "securetrack_crypto"
version = "0.1.0"
edition = "2021"
authors = ["SecureTrack Team"]
description = "Secure encryption module for the SecureTrack anti-theft app"
license = "MIT"
repository = "https://github.com/RaheesAhmed/SecureTrack-Encryption.git"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.86"
aes-gcm = "0.10.3"
aes-siv = "0.7.0"
hmac = "0.12.1"
sha2 = "0.10.7"
pbkdf2 = "0.12.2"
argon2 = "0.5.2"
rand = { version = "0.8.5", features = ["getrandom"] }
getrandom = { version = "0.2.10", features = ["js"] }
serde = { version = "1.0.171", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
js-sys = "0.3.63"
console_error_panic_hook = "0.1.7"
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.36"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true 
